--- a/food-network/style.css
+++ b/food-network/style.css
@@ -70,11 +70,26 @@ p{
       padding-right: 20px;
       padding-left: -50px;
   }
-
+  .divided{
+    display: flex;
+    margin-left: 70px;
+    margin-right: 70px;
+    margin-top: 150px;
+    margin-bottom: 150px;
+    border-radius: 15px;
+    box-shadow: 15px 20px 20px 20px  #f1ebeb;
+}
+.left{
+    padding-left: 150px;
+}
+.center{
+    padding-left: 200px;
+}
+.right{
+    padding-left: 200px;
+}
   footer{
     background-color: black;
     text-align: center;
     padding: 60px 450px 60px 450px ;
  }
-
-  
