--- a/food-network/style.css
+++ b/food-network/style.css
@@ -3,7 +3,7 @@ body{
     
 }
 .orange-color{
-    color: rgb(255, 94, 0);
+    color: rgb(243, 85, 22);
 }
 .top{
     display: flex;
@@ -31,7 +31,7 @@ p{
 }
 .button{
    text-decoration: none;
-   background-image: linear-gradient(orange,tomato);
+   background-image: linear-gradient(rgb(255, 136, 0),tomato);
    color: white;
    font-size: 20px;
    padding: 3%;
